[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/level_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/backgrounds/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/items/frames/default_frame.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/items/bricks/normal_brick.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/items/paddles/normal_paddle.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/hud/in_game/pause_menu.tscn" type="PackedScene" id=6]

[node name="Stage1Level4" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 640.0, 1239.78, 136.666, 1264.0, 112.0, 1139.2, 1164.8, 1152.0, 456.0 ],
"_edit_vertical_guides_": [ 360.0, 679.333, 40.0, 16.0, 704.0, 110.0, 270.0, 300.0, 420.0, 696.0, 468.0, 206.0, 208.0 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 720, 0 )
rotation = 1.5708
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Game" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="Game" instance=ExtResource( 3 )]
margin_left = 12.0
margin_top = 192.0
margin_right = 704.0
margin_bottom = 1356.0

[node name="Bricks" type="Node2D" parent="Game"]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="NormalBrick4" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 258, 300 )
point = 5
harden = true

[node name="NormalBrick4 5" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 156, 388.002 )
point = 5
harden = true

[node name="NormalBrick4 8" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 258, 432 )

[node name="NormalBrick4 2" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 156, 300.002 )

[node name="NormalBrick4 3" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 257.6, 476 )
point = 5
harden = true

[node name="NormalBrick4 10" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 156, 608 )
point = 5
harden = true

[node name="NormalBrick4 11" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 257.6, 564 )
point = 5
harden = true

[node name="NormalBrick4 14" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 156, 520 )

[node name="NormalBrick4 15" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 462.4, 432 )

[node name="NormalBrick5 4" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 360, 388.002 )
point = 5
harden = true

[node name="NormalBrick5 5" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 360, 344 )

[node name="NormalBrick5 6" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 462.4, 476 )
point = 5
harden = true

[node name="NormalBrick7" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 564, 388.002 )
point = 5
harden = true

[node name="NormalBrick7 8" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 462, 300 )
point = 5
harden = true

[node name="NormalBrick7 2" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 564, 300.002 )

[node name="NormalBrick7 12" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 564, 520 )

[node name="NormalBrick7 9" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 564, 608 )
point = 5
harden = true

[node name="NormalBrick7 11" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 462.4, 564 )
point = 5
harden = true

[node name="NormalBrick7 13" parent="Game/Bricks" instance=ExtResource( 4 )]
position = Vector2( 360, 652 )

[node name="Balls" type="Node2D" parent="Game"]
__meta__ = {
"_edit_lock_": true
}

[node name="Drops" type="Node2D" parent="Game"]
__meta__ = {
"_edit_lock_": true
}

[node name="Lasers" type="Node2D" parent="Game"]

[node name="Paddle" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 360, 1184 )

[node name="Pause" parent="." instance=ExtResource( 6 )]
editor/display_folded = true

[node name="UI" parent="Pause" index="1"]
editor/display_folded = true

[node name="LevelName" parent="Pause/UI/Hub" index="0"]
text = "S1L4"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[editable path="Pause"]
